fix sonar coverage issues